...
    <data>
        <variable
            name="usersViewModel"
            type="modularization.features.postandcomments.viewmodel.GetUsersViewModel" />
    </data>
<androidx.cardview.widget.CardView
    android:id="@+id/card_id_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">
...
